test/invalid/invalid_rdata.zone
example.com. 3600 IN A 256.256.256.256
